--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@ body {
 .navigation {
     background-color: #1F2932;
     margin: 0px;
-    padding: 0px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 30px 150px;
 }
 
 .navigation > ul {
@@ -98,11 +97,14 @@ footer {
     padding-bottom: 15px;
     border-radius: 10px;
     border: 2px solid #cacccf;
+    width: 15%;
+    height: auto;
 }
 
 .card > img {
     height: 150px;
     width: auto;
+    object-fit: scale-down;
     /* flex-shrink: 0; */
 }
 
